src/parser.output
Terminals unused in grammar

   ETOK


Grammar

    0 $accept: program $end

    1 program: declaration_list '{' decl_statements '}' statement_list '{' code_statements '}'

    2 DIDS: IDS
    3     | DIDS ',' IDS

    4 decl_statements: decl_statement
    5                | decl_statements decl_statement

    6 decl_statement: INT DIDS ';'
    7               | ';'

    8 code_statements: code_statement
    9                | code_statement code_statements
   10                | IDENTIFIER ':' code_statements

   11 code_statement: loops
   12               | ifc
   13               | io ';'
   14               | equals ';'

   15 loops: forloop
   16      | whileloop
   17      | gotoc ';'

   18 io: out
   19   | scan

   20 gotoc: GOTO IDENTIFIER IF boolexpr
   21      | GOTO IDENTIFIER

   22 forloop: FOR IDS '=' NUMBER ',' NUMBER ',' NUMBER '{' code_statements '}'
   23        | FOR IDS '=' NUMBER ',' NUMBER '{' code_statements '}'

   24 whileloop: WHILE boolexpr '{' code_statements '}'

   25 ifc: IF boolexpr '{' code_statements '}' ELSE '{' code_statements '}'
   26    | IF boolexpr '{' code_statements '}'

   27 equals: IDS '=' expr

   28 scan: READ MIDS

   29 out: PRINT statement
   30    | PRINTLN statement

   31 statement: prints
   32          | statement ',' prints

   33 prints: STRING
   34       | expr

   35 expr: term
   36     | expr '+' expr
   37     | expr '*' expr
   38     | expr '-' expr
   39     | expr '/' expr

   40 boolexpr: expr GT expr
   41         | expr GTE expr
   42         | expr LT expr
   43         | expr LTE expr
   44         | expr DE expr
   45         | expr NE expr

   46 term: IDS
   47     | NUMBER

   48 IDS: IDENTIFIER
   49    | IDENTIFIER '[' expr ']'

   50 MIDS: IDS
   51     | MIDS ',' IDS


Terminals, with rules where they appear

$end (0) 0
'*' (42) 37
'+' (43) 36
',' (44) 3 22 23 32 51
'-' (45) 38
'/' (47) 39
':' (58) 10
';' (59) 6 7 13 14 17
'=' (61) 22 23 27
'[' (91) 49
']' (93) 49
'{' (123) 1 22 23 24 25 26
'}' (125) 1 22 23 24 25 26
error (256)
declaration_list (258) 1
statement_list (259) 1
NUMBER (260) 22 23 47
IDENTIFIER (261) 10 20 21 48 49
ETOK (262)
INT (263) 6
FOR (264) 22 23
IF (265) 20 25 26
ELSE (266) 25
GOTO (267) 20 21
WHILE (268) 24
GT (269) 40
GTE (270) 41
LT (271) 42
LTE (272) 43
DE (273) 44
NE (274) 45
STRING (275) 33
PRINT (276) 29
PRINTLN (277) 30
READ (278) 28


Nonterminals, with rules where they appear

$accept (36)
    on left: 0
program (37)
    on left: 1, on right: 0
DIDS (38)
    on left: 2 3, on right: 3 6
decl_statements (39)
    on left: 4 5, on right: 1 5
decl_statement (40)
    on left: 6 7, on right: 4 5
code_statements (41)
    on left: 8 9 10, on right: 1 9 10 22 23 24 25 26
code_statement (42)
    on left: 11 12 13 14, on right: 8 9
loops (43)
    on left: 15 16 17, on right: 11
io (44)
    on left: 18 19, on right: 13
gotoc (45)
    on left: 20 21, on right: 17
forloop (46)
    on left: 22 23, on right: 15
whileloop (47)
    on left: 24, on right: 16
ifc (48)
    on left: 25 26, on right: 12
equals (49)
    on left: 27, on right: 14
scan (50)
    on left: 28, on right: 19
out (51)
    on left: 29 30, on right: 18
statement (52)
    on left: 31 32, on right: 29 30 32
prints (53)
    on left: 33 34, on right: 31 32
expr (54)
    on left: 35 36 37 38 39, on right: 27 34 36 37 38 39 40 41 42 43
    44 45 49
boolexpr (55)
    on left: 40 41 42 43 44 45, on right: 20 24 25 26
term (56)
    on left: 46 47, on right: 35
IDS (57)
    on left: 48 49, on right: 2 3 22 23 27 46 50 51
MIDS (58)
    on left: 50 51, on right: 28 51


State 0

    0 $accept: . program $end
    1 program: . declaration_list '{' decl_statements '}' statement_list '{' code_statements '}'

    declaration_list  shift, and go to state 1

    program  go to state 2


State 1

    1 program: declaration_list . '{' decl_statements '}' statement_list '{' code_statements '}'

    '{'  shift, and go to state 3


State 2

    0 $accept: program . $end

    $end  shift, and go to state 4


State 3

    1 program: declaration_list '{' . decl_statements '}' statement_list '{' code_statements '}'
    4 decl_statements: . decl_statement
    5                | . decl_statements decl_statement
    6 decl_statement: . INT DIDS ';'
    7               | . ';'

    INT  shift, and go to state 5
    ';'  shift, and go to state 6

    decl_statements  go to state 7
    decl_statement   go to state 8


State 4

    0 $accept: program $end .

    $default  accept


State 5

    2 DIDS: . IDS
    3     | . DIDS ',' IDS
    6 decl_statement: INT . DIDS ';'
   48 IDS: . IDENTIFIER
   49    | . IDENTIFIER '[' expr ']'

    IDENTIFIER  shift, and go to state 9

    DIDS  go to state 10
    IDS   go to state 11


State 6

    7 decl_statement: ';' .

    $default  reduce using rule 7 (decl_statement)


State 7

    1 program: declaration_list '{' decl_statements . '}' statement_list '{' code_statements '}'
    5 decl_statements: decl_statements . decl_statement
    6 decl_statement: . INT DIDS ';'
    7               | . ';'

    INT  shift, and go to state 5
    '}'  shift, and go to state 12
    ';'  shift, and go to state 6

    decl_statement  go to state 13


State 8

    4 decl_statements: decl_statement .

    $default  reduce using rule 4 (decl_statements)


State 9

   48 IDS: IDENTIFIER .  [GT, GTE, LT, LTE, DE, NE, '+', '-', '*', '/', '{', ',', ';', '=', ']']
   49    | IDENTIFIER . '[' expr ']'

    '['  shift, and go to state 14

    $default  reduce using rule 48 (IDS)


State 10

    3 DIDS: DIDS . ',' IDS
    6 decl_statement: INT DIDS . ';'

    ','  shift, and go to state 15
    ';'  shift, and go to state 16


State 11

    2 DIDS: IDS .

    $default  reduce using rule 2 (DIDS)


State 12

    1 program: declaration_list '{' decl_statements '}' . statement_list '{' code_statements '}'

    statement_list  shift, and go to state 17


State 13

    5 decl_statements: decl_statements decl_statement .

    $default  reduce using rule 5 (decl_statements)


State 14

   35 expr: . term
   36     | . expr '+' expr
   37     | . expr '*' expr
   38     | . expr '-' expr
   39     | . expr '/' expr
   46 term: . IDS
   47     | . NUMBER
   48 IDS: . IDENTIFIER
   49    | . IDENTIFIER '[' expr ']'
   49    | IDENTIFIER '[' . expr ']'

    NUMBER      shift, and go to state 18
    IDENTIFIER  shift, and go to state 9

    expr  go to state 19
    term  go to state 20
    IDS   go to state 21


State 15

    3 DIDS: DIDS ',' . IDS
   48 IDS: . IDENTIFIER
   49    | . IDENTIFIER '[' expr ']'

    IDENTIFIER  shift, and go to state 9

    IDS  go to state 22


State 16

    6 decl_statement: INT DIDS ';' .

    $default  reduce using rule 6 (decl_statement)


State 17

    1 program: declaration_list '{' decl_statements '}' statement_list . '{' code_statements '}'

    '{'  shift, and go to state 23


State 18

   47 term: NUMBER .

    $default  reduce using rule 47 (term)


State 19

   36 expr: expr . '+' expr
   37     | expr . '*' expr
   38     | expr . '-' expr
   39     | expr . '/' expr
   49 IDS: IDENTIFIER '[' expr . ']'

    '+'  shift, and go to state 24
    '-'  shift, and go to state 25
    '*'  shift, and go to state 26
    '/'  shift, and go to state 27
    ']'  shift, and go to state 28


State 20

   35 expr: term .

    $default  reduce using rule 35 (expr)


State 21

   46 term: IDS .

    $default  reduce using rule 46 (term)


State 22

    3 DIDS: DIDS ',' IDS .

    $default  reduce using rule 3 (DIDS)


State 23

    1 program: declaration_list '{' decl_statements '}' statement_list '{' . code_statements '}'
    8 code_statements: . code_statement
    9                | . code_statement code_statements
   10                | . IDENTIFIER ':' code_statements
   11 code_statement: . loops
   12               | . ifc
   13               | . io ';'
   14               | . equals ';'
   15 loops: . forloop
   16      | . whileloop
   17      | . gotoc ';'
   18 io: . out
   19   | . scan
   20 gotoc: . GOTO IDENTIFIER IF boolexpr
   21      | . GOTO IDENTIFIER
   22 forloop: . FOR IDS '=' NUMBER ',' NUMBER ',' NUMBER '{' code_statements '}'
   23        | . FOR IDS '=' NUMBER ',' NUMBER '{' code_statements '}'
   24 whileloop: . WHILE boolexpr '{' code_statements '}'
   25 ifc: . IF boolexpr '{' code_statements '}' ELSE '{' code_statements '}'
   26    | . IF boolexpr '{' code_statements '}'
   27 equals: . IDS '=' expr
   28 scan: . READ MIDS
   29 out: . PRINT statement
   30    | . PRINTLN statement
   48 IDS: . IDENTIFIER
   49    | . IDENTIFIER '[' expr ']'

    IDENTIFIER  shift, and go to state 29
    FOR         shift, and go to state 30
    IF          shift, and go to state 31
    GOTO        shift, and go to state 32
    WHILE       shift, and go to state 33
    PRINT       shift, and go to state 34
    PRINTLN     shift, and go to state 35
    READ        shift, and go to state 36

    code_statements  go to state 37
    code_statement   go to state 38
    loops            go to state 39
    io               go to state 40
    gotoc            go to state 41
    forloop          go to state 42
    whileloop        go to state 43
    ifc              go to state 44
    equals           go to state 45
    scan             go to state 46
    out              go to state 47
    IDS              go to state 48


State 24

   35 expr: . term
   36     | . expr '+' expr
   36     | expr '+' . expr
   37     | . expr '*' expr
   38     | . expr '-' expr
   39     | . expr '/' expr
   46 term: . IDS
   47     | . NUMBER
   48 IDS: . IDENTIFIER
   49    | . IDENTIFIER '[' expr ']'

    NUMBER      shift, and go to state 18
    IDENTIFIER  shift, and go to state 9

    expr  go to state 49
    term  go to state 20
    IDS   go to state 21


State 25

   35 expr: . term
   36     | . expr '+' expr
   37     | . expr '*' expr
   38     | . expr '-' expr
   38     | expr '-' . expr
   39     | . expr '/' expr
   46 term: . IDS
   47     | . NUMBER
   48 IDS: . IDENTIFIER
   49    | . IDENTIFIER '[' expr ']'

    NUMBER      shift, and go to state 18
    IDENTIFIER  shift, and go to state 9

    expr  go to state 50
    term  go to state 20
    IDS   go to state 21


State 26

   35 expr: . term
   36     | . expr '+' expr
   37     | . expr '*' expr
   37     | expr '*' . expr
   38     | . expr '-' expr
   39     | . expr '/' expr
   46 term: . IDS
   47     | . NUMBER
   48 IDS: . IDENTIFIER
   49    | . IDENTIFIER '[' expr ']'

    NUMBER      shift, and go to state 18
    IDENTIFIER  shift, and go to state 9

    expr  go to state 51
    term  go to state 20
    IDS   go to state 21


State 27

   35 expr: . term
   36     | . expr '+' expr
   37     | . expr '*' expr
   38     | . expr '-' expr
   39     | . expr '/' expr
   39     | expr '/' . expr
   46 term: . IDS
   47     | . NUMBER
   48 IDS: . IDENTIFIER
   49    | . IDENTIFIER '[' expr ']'

    NUMBER      shift, and go to state 18
    IDENTIFIER  shift, and go to state 9

    expr  go to state 52
    term  go to state 20
    IDS   go to state 21


State 28

   49 IDS: IDENTIFIER '[' expr ']' .

    $default  reduce using rule 49 (IDS)


State 29

   10 code_statements: IDENTIFIER . ':' code_statements
   48 IDS: IDENTIFIER .  ['=']
   49    | IDENTIFIER . '[' expr ']'

    ':'  shift, and go to state 53
    '['  shift, and go to state 14

    $default  reduce using rule 48 (IDS)


State 30

   22 forloop: FOR . IDS '=' NUMBER ',' NUMBER ',' NUMBER '{' code_statements '}'
   23        | FOR . IDS '=' NUMBER ',' NUMBER '{' code_statements '}'
   48 IDS: . IDENTIFIER
   49    | . IDENTIFIER '[' expr ']'

    IDENTIFIER  shift, and go to state 9

    IDS  go to state 54


State 31

   25 ifc: IF . boolexpr '{' code_statements '}' ELSE '{' code_statements '}'
   26    | IF . boolexpr '{' code_statements '}'
   35 expr: . term
   36     | . expr '+' expr
   37     | . expr '*' expr
   38     | . expr '-' expr
   39     | . expr '/' expr
   40 boolexpr: . expr GT expr
   41         | . expr GTE expr
   42         | . expr LT expr
   43         | . expr LTE expr
   44         | . expr DE expr
   45         | . expr NE expr
   46 term: . IDS
   47     | . NUMBER
   48 IDS: . IDENTIFIER
   49    | . IDENTIFIER '[' expr ']'

    NUMBER      shift, and go to state 18
    IDENTIFIER  shift, and go to state 9

    expr      go to state 55
    boolexpr  go to state 56
    term      go to state 20
    IDS       go to state 21


State 32

   20 gotoc: GOTO . IDENTIFIER IF boolexpr
   21      | GOTO . IDENTIFIER

    IDENTIFIER  shift, and go to state 57


State 33

   24 whileloop: WHILE . boolexpr '{' code_statements '}'
   35 expr: . term
   36     | . expr '+' expr
   37     | . expr '*' expr
   38     | . expr '-' expr
   39     | . expr '/' expr
   40 boolexpr: . expr GT expr
   41         | . expr GTE expr
   42         | . expr LT expr
   43         | . expr LTE expr
   44         | . expr DE expr
   45         | . expr NE expr
   46 term: . IDS
   47     | . NUMBER
   48 IDS: . IDENTIFIER
   49    | . IDENTIFIER '[' expr ']'

    NUMBER      shift, and go to state 18
    IDENTIFIER  shift, and go to state 9

    expr      go to state 55
    boolexpr  go to state 58
    term      go to state 20
    IDS       go to state 21


State 34

   29 out: PRINT . statement
   31 statement: . prints
   32          | . statement ',' prints
   33 prints: . STRING
   34       | . expr
   35 expr: . term
   36     | . expr '+' expr
   37     | . expr '*' expr
   38     | . expr '-' expr
   39     | . expr '/' expr
   46 term: . IDS
   47     | . NUMBER
   48 IDS: . IDENTIFIER
   49    | . IDENTIFIER '[' expr ']'

    NUMBER      shift, and go to state 18
    IDENTIFIER  shift, and go to state 9
    STRING      shift, and go to state 59

    statement  go to state 60
    prints     go to state 61
    expr       go to state 62
    term       go to state 20
    IDS        go to state 21


State 35

   30 out: PRINTLN . statement
   31 statement: . prints
   32          | . statement ',' prints
   33 prints: . STRING
   34       | . expr
   35 expr: . term
   36     | . expr '+' expr
   37     | . expr '*' expr
   38     | . expr '-' expr
   39     | . expr '/' expr
   46 term: . IDS
   47     | . NUMBER
   48 IDS: . IDENTIFIER
   49    | . IDENTIFIER '[' expr ']'

    NUMBER      shift, and go to state 18
    IDENTIFIER  shift, and go to state 9
    STRING      shift, and go to state 59

    statement  go to state 63
    prints     go to state 61
    expr       go to state 62
    term       go to state 20
    IDS        go to state 21


State 36

   28 scan: READ . MIDS
   48 IDS: . IDENTIFIER
   49    | . IDENTIFIER '[' expr ']'
   50 MIDS: . IDS
   51     | . MIDS ',' IDS

    IDENTIFIER  shift, and go to state 9

    IDS   go to state 64
    MIDS  go to state 65


State 37

    1 program: declaration_list '{' decl_statements '}' statement_list '{' code_statements . '}'

    '}'  shift, and go to state 66


State 38

    8 code_statements: . code_statement
    8                | code_statement .  ['}']
    9                | . code_statement code_statements
    9                | code_statement . code_statements
   10                | . IDENTIFIER ':' code_statements
   11 code_statement: . loops
   12               | . ifc
   13               | . io ';'
   14               | . equals ';'
   15 loops: . forloop
   16      | . whileloop
   17      | . gotoc ';'
   18 io: . out
   19   | . scan
   20 gotoc: . GOTO IDENTIFIER IF boolexpr
   21      | . GOTO IDENTIFIER
   22 forloop: . FOR IDS '=' NUMBER ',' NUMBER ',' NUMBER '{' code_statements '}'
   23        | . FOR IDS '=' NUMBER ',' NUMBER '{' code_statements '}'
   24 whileloop: . WHILE boolexpr '{' code_statements '}'
   25 ifc: . IF boolexpr '{' code_statements '}' ELSE '{' code_statements '}'
   26    | . IF boolexpr '{' code_statements '}'
   27 equals: . IDS '=' expr
   28 scan: . READ MIDS
   29 out: . PRINT statement
   30    | . PRINTLN statement
   48 IDS: . IDENTIFIER
   49    | . IDENTIFIER '[' expr ']'

    IDENTIFIER  shift, and go to state 29
    FOR         shift, and go to state 30
    IF          shift, and go to state 31
    GOTO        shift, and go to state 32
    WHILE       shift, and go to state 33
    PRINT       shift, and go to state 34
    PRINTLN     shift, and go to state 35
    READ        shift, and go to state 36

    $default  reduce using rule 8 (code_statements)

    code_statements  go to state 67
    code_statement   go to state 38
    loops            go to state 39
    io               go to state 40
    gotoc            go to state 41
    forloop          go to state 42
    whileloop        go to state 43
    ifc              go to state 44
    equals           go to state 45
    scan             go to state 46
    out              go to state 47
    IDS              go to state 48


State 39

   11 code_statement: loops .

    $default  reduce using rule 11 (code_statement)


State 40

   13 code_statement: io . ';'

    ';'  shift, and go to state 68


State 41

   17 loops: gotoc . ';'

    ';'  shift, and go to state 69


State 42

   15 loops: forloop .

    $default  reduce using rule 15 (loops)


State 43

   16 loops: whileloop .

    $default  reduce using rule 16 (loops)


State 44

   12 code_statement: ifc .

    $default  reduce using rule 12 (code_statement)


State 45

   14 code_statement: equals . ';'

    ';'  shift, and go to state 70


State 46

   19 io: scan .

    $default  reduce using rule 19 (io)


State 47

   18 io: out .

    $default  reduce using rule 18 (io)


State 48

   27 equals: IDS . '=' expr

    '='  shift, and go to state 71


State 49

   36 expr: expr . '+' expr
   36     | expr '+' expr .  [GT, GTE, LT, LTE, DE, NE, '+', '-', '{', ',', ';', ']']
   37     | expr . '*' expr
   38     | expr . '-' expr
   39     | expr . '/' expr

    '*'  shift, and go to state 26
    '/'  shift, and go to state 27

    $default  reduce using rule 36 (expr)

    Conflict between rule 36 and token '+' resolved as reduce (%left '+').
    Conflict between rule 36 and token '-' resolved as reduce (%left '-').
    Conflict between rule 36 and token '*' resolved as shift ('+' < '*').
    Conflict between rule 36 and token '/' resolved as shift ('+' < '/').


State 50

   36 expr: expr . '+' expr
   37     | expr . '*' expr
   38     | expr . '-' expr
   38     | expr '-' expr .  [GT, GTE, LT, LTE, DE, NE, '+', '-', '{', ',', ';', ']']
   39     | expr . '/' expr

    '*'  shift, and go to state 26
    '/'  shift, and go to state 27

    $default  reduce using rule 38 (expr)

    Conflict between rule 38 and token '+' resolved as reduce (%left '+').
    Conflict between rule 38 and token '-' resolved as reduce (%left '-').
    Conflict between rule 38 and token '*' resolved as shift ('-' < '*').
    Conflict between rule 38 and token '/' resolved as shift ('-' < '/').


State 51

   36 expr: expr . '+' expr
   37     | expr . '*' expr
   37     | expr '*' expr .  [GT, GTE, LT, LTE, DE, NE, '+', '-', '*', '/', '{', ',', ';', ']']
   38     | expr . '-' expr
   39     | expr . '/' expr

    $default  reduce using rule 37 (expr)

    Conflict between rule 37 and token '+' resolved as reduce ('+' < '*').
    Conflict between rule 37 and token '-' resolved as reduce ('-' < '*').
    Conflict between rule 37 and token '*' resolved as reduce (%left '*').
    Conflict between rule 37 and token '/' resolved as reduce (%left '/').


State 52

   36 expr: expr . '+' expr
   37     | expr . '*' expr
   38     | expr . '-' expr
   39     | expr . '/' expr
   39     | expr '/' expr .  [GT, GTE, LT, LTE, DE, NE, '+', '-', '*', '/', '{', ',', ';', ']']

    $default  reduce using rule 39 (expr)

    Conflict between rule 39 and token '+' resolved as reduce ('+' < '/').
    Conflict between rule 39 and token '-' resolved as reduce ('-' < '/').
    Conflict between rule 39 and token '*' resolved as reduce (%left '*').
    Conflict between rule 39 and token '/' resolved as reduce (%left '/').


State 53

    8 code_statements: . code_statement
    9                | . code_statement code_statements
   10                | . IDENTIFIER ':' code_statements
   10                | IDENTIFIER ':' . code_statements
   11 code_statement: . loops
   12               | . ifc
   13               | . io ';'
   14               | . equals ';'
   15 loops: . forloop
   16      | . whileloop
   17      | . gotoc ';'
   18 io: . out
   19   | . scan
   20 gotoc: . GOTO IDENTIFIER IF boolexpr
   21      | . GOTO IDENTIFIER
   22 forloop: . FOR IDS '=' NUMBER ',' NUMBER ',' NUMBER '{' code_statements '}'
   23        | . FOR IDS '=' NUMBER ',' NUMBER '{' code_statements '}'
   24 whileloop: . WHILE boolexpr '{' code_statements '}'
   25 ifc: . IF boolexpr '{' code_statements '}' ELSE '{' code_statements '}'
   26    | . IF boolexpr '{' code_statements '}'
   27 equals: . IDS '=' expr
   28 scan: . READ MIDS
   29 out: . PRINT statement
   30    | . PRINTLN statement
   48 IDS: . IDENTIFIER
   49    | . IDENTIFIER '[' expr ']'

    IDENTIFIER  shift, and go to state 29
    FOR         shift, and go to state 30
    IF          shift, and go to state 31
    GOTO        shift, and go to state 32
    WHILE       shift, and go to state 33
    PRINT       shift, and go to state 34
    PRINTLN     shift, and go to state 35
    READ        shift, and go to state 36

    code_statements  go to state 72
    code_statement   go to state 38
    loops            go to state 39
    io               go to state 40
    gotoc            go to state 41
    forloop          go to state 42
    whileloop        go to state 43
    ifc              go to state 44
    equals           go to state 45
    scan             go to state 46
    out              go to state 47
    IDS              go to state 48


State 54

   22 forloop: FOR IDS . '=' NUMBER ',' NUMBER ',' NUMBER '{' code_statements '}'
   23        | FOR IDS . '=' NUMBER ',' NUMBER '{' code_statements '}'

    '='  shift, and go to state 73


State 55

   36 expr: expr . '+' expr
   37     | expr . '*' expr
   38     | expr . '-' expr
   39     | expr . '/' expr
   40 boolexpr: expr . GT expr
   41         | expr . GTE expr
   42         | expr . LT expr
   43         | expr . LTE expr
   44         | expr . DE expr
   45         | expr . NE expr

    GT   shift, and go to state 74
    GTE  shift, and go to state 75
    LT   shift, and go to state 76
    LTE  shift, and go to state 77
    DE   shift, and go to state 78
    NE   shift, and go to state 79
    '+'  shift, and go to state 24
    '-'  shift, and go to state 25
    '*'  shift, and go to state 26
    '/'  shift, and go to state 27


State 56

   25 ifc: IF boolexpr . '{' code_statements '}' ELSE '{' code_statements '}'
   26    | IF boolexpr . '{' code_statements '}'

    '{'  shift, and go to state 80


State 57

   20 gotoc: GOTO IDENTIFIER . IF boolexpr
   21      | GOTO IDENTIFIER .  [';']

    IF  shift, and go to state 81

    $default  reduce using rule 21 (gotoc)


State 58

   24 whileloop: WHILE boolexpr . '{' code_statements '}'

    '{'  shift, and go to state 82


State 59

   33 prints: STRING .

    $default  reduce using rule 33 (prints)


State 60

   29 out: PRINT statement .  [';']
   32 statement: statement . ',' prints

    ','  shift, and go to state 83

    $default  reduce using rule 29 (out)


State 61

   31 statement: prints .

    $default  reduce using rule 31 (statement)


State 62

   34 prints: expr .  [',', ';']
   36 expr: expr . '+' expr
   37     | expr . '*' expr
   38     | expr . '-' expr
   39     | expr . '/' expr

    '+'  shift, and go to state 24
    '-'  shift, and go to state 25
    '*'  shift, and go to state 26
    '/'  shift, and go to state 27

    $default  reduce using rule 34 (prints)


State 63

   30 out: PRINTLN statement .  [';']
   32 statement: statement . ',' prints

    ','  shift, and go to state 83

    $default  reduce using rule 30 (out)


State 64

   50 MIDS: IDS .

    $default  reduce using rule 50 (MIDS)


State 65

   28 scan: READ MIDS .  [';']
   51 MIDS: MIDS . ',' IDS

    ','  shift, and go to state 84

    $default  reduce using rule 28 (scan)


State 66

    1 program: declaration_list '{' decl_statements '}' statement_list '{' code_statements '}' .

    $default  reduce using rule 1 (program)


State 67

    9 code_statements: code_statement code_statements .

    $default  reduce using rule 9 (code_statements)


State 68

   13 code_statement: io ';' .

    $default  reduce using rule 13 (code_statement)


State 69

   17 loops: gotoc ';' .

    $default  reduce using rule 17 (loops)


State 70

   14 code_statement: equals ';' .

    $default  reduce using rule 14 (code_statement)


State 71

   27 equals: IDS '=' . expr
   35 expr: . term
   36     | . expr '+' expr
   37     | . expr '*' expr
   38     | . expr '-' expr
   39     | . expr '/' expr
   46 term: . IDS
   47     | . NUMBER
   48 IDS: . IDENTIFIER
   49    | . IDENTIFIER '[' expr ']'

    NUMBER      shift, and go to state 18
    IDENTIFIER  shift, and go to state 9

    expr  go to state 85
    term  go to state 20
    IDS   go to state 21


State 72

   10 code_statements: IDENTIFIER ':' code_statements .

    $default  reduce using rule 10 (code_statements)


State 73

   22 forloop: FOR IDS '=' . NUMBER ',' NUMBER ',' NUMBER '{' code_statements '}'
   23        | FOR IDS '=' . NUMBER ',' NUMBER '{' code_statements '}'

    NUMBER  shift, and go to state 86


State 74

   35 expr: . term
   36     | . expr '+' expr
   37     | . expr '*' expr
   38     | . expr '-' expr
   39     | . expr '/' expr
   40 boolexpr: expr GT . expr
   46 term: . IDS
   47     | . NUMBER
   48 IDS: . IDENTIFIER
   49    | . IDENTIFIER '[' expr ']'

    NUMBER      shift, and go to state 18
    IDENTIFIER  shift, and go to state 9

    expr  go to state 87
    term  go to state 20
    IDS   go to state 21


State 75

   35 expr: . term
   36     | . expr '+' expr
   37     | . expr '*' expr
   38     | . expr '-' expr
   39     | . expr '/' expr
   41 boolexpr: expr GTE . expr
   46 term: . IDS
   47     | . NUMBER
   48 IDS: . IDENTIFIER
   49    | . IDENTIFIER '[' expr ']'

    NUMBER      shift, and go to state 18
    IDENTIFIER  shift, and go to state 9

    expr  go to state 88
    term  go to state 20
    IDS   go to state 21


State 76

   35 expr: . term
   36     | . expr '+' expr
   37     | . expr '*' expr
   38     | . expr '-' expr
   39     | . expr '/' expr
   42 boolexpr: expr LT . expr
   46 term: . IDS
   47     | . NUMBER
   48 IDS: . IDENTIFIER
   49    | . IDENTIFIER '[' expr ']'

    NUMBER      shift, and go to state 18
    IDENTIFIER  shift, and go to state 9

    expr  go to state 89
    term  go to state 20
    IDS   go to state 21


State 77

   35 expr: . term
   36     | . expr '+' expr
   37     | . expr '*' expr
   38     | . expr '-' expr
   39     | . expr '/' expr
   43 boolexpr: expr LTE . expr
   46 term: . IDS
   47     | . NUMBER
   48 IDS: . IDENTIFIER
   49    | . IDENTIFIER '[' expr ']'

    NUMBER      shift, and go to state 18
    IDENTIFIER  shift, and go to state 9

    expr  go to state 90
    term  go to state 20
    IDS   go to state 21


State 78

   35 expr: . term
   36     | . expr '+' expr
   37     | . expr '*' expr
   38     | . expr '-' expr
   39     | . expr '/' expr
   44 boolexpr: expr DE . expr
   46 term: . IDS
   47     | . NUMBER
   48 IDS: . IDENTIFIER
   49    | . IDENTIFIER '[' expr ']'

    NUMBER      shift, and go to state 18
    IDENTIFIER  shift, and go to state 9

    expr  go to state 91
    term  go to state 20
    IDS   go to state 21


State 79

   35 expr: . term
   36     | . expr '+' expr
   37     | . expr '*' expr
   38     | . expr '-' expr
   39     | . expr '/' expr
   45 boolexpr: expr NE . expr
   46 term: . IDS
   47     | . NUMBER
   48 IDS: . IDENTIFIER
   49    | . IDENTIFIER '[' expr ']'

    NUMBER      shift, and go to state 18
    IDENTIFIER  shift, and go to state 9

    expr  go to state 92
    term  go to state 20
    IDS   go to state 21


State 80

    8 code_statements: . code_statement
    9                | . code_statement code_statements
   10                | . IDENTIFIER ':' code_statements
   11 code_statement: . loops
   12               | . ifc
   13               | . io ';'
   14               | . equals ';'
   15 loops: . forloop
   16      | . whileloop
   17      | . gotoc ';'
   18 io: . out
   19   | . scan
   20 gotoc: . GOTO IDENTIFIER IF boolexpr
   21      | . GOTO IDENTIFIER
   22 forloop: . FOR IDS '=' NUMBER ',' NUMBER ',' NUMBER '{' code_statements '}'
   23        | . FOR IDS '=' NUMBER ',' NUMBER '{' code_statements '}'
   24 whileloop: . WHILE boolexpr '{' code_statements '}'
   25 ifc: . IF boolexpr '{' code_statements '}' ELSE '{' code_statements '}'
   25    | IF boolexpr '{' . code_statements '}' ELSE '{' code_statements '}'
   26    | . IF boolexpr '{' code_statements '}'
   26    | IF boolexpr '{' . code_statements '}'
   27 equals: . IDS '=' expr
   28 scan: . READ MIDS
   29 out: . PRINT statement
   30    | . PRINTLN statement
   48 IDS: . IDENTIFIER
   49    | . IDENTIFIER '[' expr ']'

    IDENTIFIER  shift, and go to state 29
    FOR         shift, and go to state 30
    IF          shift, and go to state 31
    GOTO        shift, and go to state 32
    WHILE       shift, and go to state 33
    PRINT       shift, and go to state 34
    PRINTLN     shift, and go to state 35
    READ        shift, and go to state 36

    code_statements  go to state 93
    code_statement   go to state 38
    loops            go to state 39
    io               go to state 40
    gotoc            go to state 41
    forloop          go to state 42
    whileloop        go to state 43
    ifc              go to state 44
    equals           go to state 45
    scan             go to state 46
    out              go to state 47
    IDS              go to state 48


State 81

   20 gotoc: GOTO IDENTIFIER IF . boolexpr
   35 expr: . term
   36     | . expr '+' expr
   37     | . expr '*' expr
   38     | . expr '-' expr
   39     | . expr '/' expr
   40 boolexpr: . expr GT expr
   41         | . expr GTE expr
   42         | . expr LT expr
   43         | . expr LTE expr
   44         | . expr DE expr
   45         | . expr NE expr
   46 term: . IDS
   47     | . NUMBER
   48 IDS: . IDENTIFIER
   49    | . IDENTIFIER '[' expr ']'

    NUMBER      shift, and go to state 18
    IDENTIFIER  shift, and go to state 9

    expr      go to state 55
    boolexpr  go to state 94
    term      go to state 20
    IDS       go to state 21


State 82

    8 code_statements: . code_statement
    9                | . code_statement code_statements
   10                | . IDENTIFIER ':' code_statements
   11 code_statement: . loops
   12               | . ifc
   13               | . io ';'
   14               | . equals ';'
   15 loops: . forloop
   16      | . whileloop
   17      | . gotoc ';'
   18 io: . out
   19   | . scan
   20 gotoc: . GOTO IDENTIFIER IF boolexpr
   21      | . GOTO IDENTIFIER
   22 forloop: . FOR IDS '=' NUMBER ',' NUMBER ',' NUMBER '{' code_statements '}'
   23        | . FOR IDS '=' NUMBER ',' NUMBER '{' code_statements '}'
   24 whileloop: . WHILE boolexpr '{' code_statements '}'
   24          | WHILE boolexpr '{' . code_statements '}'
   25 ifc: . IF boolexpr '{' code_statements '}' ELSE '{' code_statements '}'
   26    | . IF boolexpr '{' code_statements '}'
   27 equals: . IDS '=' expr
   28 scan: . READ MIDS
   29 out: . PRINT statement
   30    | . PRINTLN statement
   48 IDS: . IDENTIFIER
   49    | . IDENTIFIER '[' expr ']'

    IDENTIFIER  shift, and go to state 29
    FOR         shift, and go to state 30
    IF          shift, and go to state 31
    GOTO        shift, and go to state 32
    WHILE       shift, and go to state 33
    PRINT       shift, and go to state 34
    PRINTLN     shift, and go to state 35
    READ        shift, and go to state 36

    code_statements  go to state 95
    code_statement   go to state 38
    loops            go to state 39
    io               go to state 40
    gotoc            go to state 41
    forloop          go to state 42
    whileloop        go to state 43
    ifc              go to state 44
    equals           go to state 45
    scan             go to state 46
    out              go to state 47
    IDS              go to state 48


State 83
